# nba-intelligence-hub

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
api/: main.py  models.py  routes.py
assistant/: nfl_agent.py  tools.py
config/: settings.py
data/: assemble.py  build_embeddings.py  cap_hits.py  cfbd_fetch.py  compare_data.py  espn_nfl.py  fetch_stats.py  nfl_fetch.py  nfl_transform.py  rookie_scale.py  transform.py
frontend/: app.py
frontend/components/: assistant_view.py  charts.py  chat.py  compare_view.py  grade_view.py  player_compare.py  stats_card.py  tables.py  trade_view.py  views.py
grading/: __init__.py  nba_grades.py  nfl_grades.py  pipeline.py  scale.py  team_report.py
rag/: chain.py  prompts.py  retriever.py  vector_store.py
summary/: __init__.py  llm_summary.py
trade/: __init__.py  analysis.py  nfl_trade.py  picks.py
