[project]
name = "nba-intelligence-hub"
version = "3.1.0"
description = "NFL & NBA roster grader with cap-legal NFL trade simulator: position grades, team needs, player compare, stats"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
include = ["config*", "data*", "grading*", "summary*", "trade*", "api*", "frontend*"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
