[project]
name = "nba-intelligence-hub"
version = "4.0.0"
description = "NFL & NBA roster viewer with player compare and a cap-legal NFL trade simulator"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
include = ["config*", "data*", "trade*", "frontend*"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
