[project]
name = "nba-intelligence-hub"
version = "4.2.1"
description = "NFL & NBA roster viewer, player compare with charts, and a cap-legal NFL trade simulator with picks and AI analysis"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
include = ["config*", "data*", "trade*", "frontend*"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
